manifests/alert-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert
  template:
    metadata:
      labels:
        app: alert
    spec:
      containers:
      - name: alert-container
        image: gcr.io/nifty-condition-440500-t9/alert-service
        ports:
        - containerPort: 8084
