manifests/collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collector
  template:
    metadata:
      labels:
        app: collector
    spec:
      containers:
      - name: collector-container
        image: gcr.io/nifty-condition-440500-t9/collector-service
        ports:
        - containerPort: 8080
