manifests/face-recognition-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: face-recognition-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: face-recognition
  template:
    metadata:
      labels:
        app: face-recognition
    spec:
      containers:
      - name: face-recognition-container
        image: gcr.io/nifty-condition-440500-t9/face-recognition-service
        ports:
        - containerPort: 8082
