manifests/image-analysis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-analysis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-analysis
  template:
    metadata:
      labels:
        app: image-analysis
    spec:
      containers:
      - name: image-analysis-container
        image: gcr.io/my-project-123-danaa/image-analysis-service
        ports:
        - containerPort: 80
