manifests/section-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: section-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: section
  template:
    metadata:
      labels:
        app: section
    spec:
      containers:
      - name: section-container
        image: gcr.io/nifty-condition-440500-t9/section-service
        ports:
        - containerPort: 8083
