manifests/alert-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alert-service
spec:
  selector:
    app: alert
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
