manifests/collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collector-service
spec:
  selector:
    app: collector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
