manifests/grafana-service-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service-tcp
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
