manifests/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
