manifests/section-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: section-service
spec:
  selector:
    app: section
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
